--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -23,3 +23,64 @@
 textarea {
   resize: none;
 }
+
+.folder-figure-inner {
+  position: relative;
+  z-index: 3;
+  padding: 30px;
+  clip-path: polygon(0 0, calc(100% - 36px) 0, 100% 30px, 100% 100%, 0 100%);
+  border-radius: var(--radius);
+  background: #0E0C15;
+  border: 0;
+}
+
+.folder-figure-holder {
+  height: 100%;
+  position: relative;
+  display: inline-block;
+  padding: 2px;
+  transition: all 0.3s ease-in-out;
+}
+
+.folder-figure-holder:hover {
+  box-shadow: 0px 19px 19px rgba(190, 140, 253, 0.03);
+}
+
+.folder-figure-holder:hover::after{
+  opacity: 1;
+  visibility: initial;
+}
+
+.folder-figure-holder:before,
+.folder-figure-holder:after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #1A1A1E;
+  content: "";
+  clip-path: polygon(0 0, calc(100% - 36px) 0, 100% 30px, 100% 100%, 0 100%);
+  border-radius: var(--radius);
+  transition: all 0.3s ease-in-out;
+}
+
+.folder-figure-holder:after {
+  background: linear-gradient(to right, var(--color-primary-gradient-start), var(--color-primary-gradient-end));
+  opacity: 0;
+  visibility: hidden;
+  filter: drop-shadow(0px 29px 36px rgba(190, 140, 253, 0.09));
+}
+
+.custom-border:after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all 0.3s;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(180deg, var(--color-primary-gradient-start) 0%, var(--color-primary-gradient-start), transparent 77%);
+  content: "";
+  border-radius: 20px;
+}
