--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,6 +1,21 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
 
+@keyframes styles_moving-gradient {
+  0% {
+    background-position: 0 0;
+    opacity: 0.5;
+  }
+  50% {
+    background-position: 400% 0;
+    opacity: 1;
+  }
+  100% {
+    background-position: 0 0;
+    opacity: 0.5;
+  }
+}
+
 @theme {
   --container-8xl: 90rem;
   --color-primary: #805AF5;
@@ -10,6 +25,11 @@
   --color-primary-gradient-end: #CD99FF;
   --color-primary-gradient: var(linear-gradient(to right, var(--color-primary-gradient-start), var(--color-primary-gradient-end)));
   --half-border: linear-gradient(180deg, var(--color-primary-gradient-start) 0%, var(--color-primary-gradient-start), transparent 77%);
+  --background-color: #0E0C15;
+  --shadow-light: 1px 1px 6px rgba(0,0,0,0.25);
+  --shadow-primary: 0 0 20px 5px rgba(20, 126, 243, 0.1);
+  --color-dark: #21242D;
+  --ui-border: rgba(255,255,255,0.05);
 }
 
 :root {
@@ -18,10 +38,88 @@
   --half-border: var(--half-border);
   --ui-text-inverted: var(--color-white);
   --ui-text-muted: #BCC3D7;
+  --background-color: #0E0C15;
+  --shadow-light: 1px 1px 6px rgba(0,0,0,0.25);
+  --shadow-primary: 0 0 20px 5px rgba(20, 126, 243, 0.1);
+  --color-dark: #21242D;
+  --color-blackest: #16181E;
+  --color-link: #BCC3D7;
+  --ui-border: rgba(255,255,255,0.05);
+}
+
+body {
+  background-color: var(--background-color);
+}
+
+h1 {
+  font-weight: initial;
+}
+
+img {
+  display: block;
+  max-height: inherit;
 }
 
 textarea {
   resize: none;
+  min-height: 100px;
+  background: var(--color-blackest);
+  border: 2px solid transparent;
+  color: var(--color-link);
+  font-weight: 400;
+  height: auto;
+  line-height: 28px;
+  box-shadow: none;
+  outline: none;
+  padding: 15px;
+  font-size: 16px;
+  transition: .3s;
+}
+
+textarea:focus,
+textarea:active {
+  border: 2px solid var(--color-primary);
+}
+
+.gradient-button {
+  padding: 0 28px;
+  border-style: solid;
+  border-width: 0px;
+  border-color: transparent;
+  border-radius: 8px;
+  background: transparent linear-gradient(to right, var(--color-primary-gradient-start), var(--color-primary-gradient-end));
+  background-size: 200% auto;
+  transition-duration: 300ms;
+  color: var(--color-white);
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: var(--shadow-light);
+  display: inline-block;
+  height: 50px;
+  line-height: 50px;
+  letter-spacing: 0.5px;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.gradient-button:hover {
+  box-shadow: var(--shadow-primary);
+  -webkit-filter: brightness(125%);
+  filter: brightness(125%);
+  color: var(--color-white);
+  text-decoration: none;
+}
+
+.button-white{
+  background: var(--color-white);
+  color: var(--color-black);
+}
+
+.button-white:hover {
+  background: var(--color-primary);
+  color: var(--color-white);
 }
 
 .folder-figure-inner {
@@ -83,4 +181,17 @@ textarea {
   background: linear-gradient(180deg, var(--color-primary-gradient-start) 0%, var(--color-primary-gradient-start), transparent 77%);
   content: "";
   border-radius: 20px;
+}
+
+.h-fill-available {
+  height: -webkit-fill-available;
+}
+
+.gradient-text {
+  background-image: linear-gradient(to right, var(--color-primary-gradient-start), var(--color-primary-gradient-end));
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  backface-visibility: hidden;
+  text-transform: capitalize;
 }
