--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -104,6 +104,46 @@ textarea:active {
   cursor: pointer;
 }
 
+.gradient-button-figure {
+  display: inline-block;
+  height: 45px;
+  line-height: 45px;
+  position: relative;
+  z-index: 3;
+  background: #0e0c15;
+  padding: 0 30px;
+  clip-path: polygon(0 0, calc(100% - 18px) 0, 100% 14px, 100% 100%, 0 100%);
+  border-radius: 2px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.gradient-button-figure:after {
+  background: linear-gradient(to left, var(--color-primary-gradient-start), var(--color-primary-gradient-end));
+  opacity: 0;
+  visibility: hidden;
+}
+
+.gradient-button-figure:hover:after {
+  opacity: 1;
+  visibility: visible;
+}
+
+.gradient-button-figure:before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all 0.3s;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, var(--color-primary-gradient-start), var(--color-primary-gradient-end));
+  content: "";
+  clip-path: polygon(0 0, calc(100% - 18px) 0, 100% 14px, 100% 100%, 0 100%);
+  border-radius: 2px;
+  z-index: 1;
+}
+
 .gradient-button:hover {
   box-shadow: var(--shadow-primary);
   -webkit-filter: brightness(125%);
