--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -105,43 +105,58 @@ textarea:active {
 }
 
 .gradient-button-figure {
-  display: inline-block;
+  position: relative;
+  padding: 0 30px;
   height: 45px;
   line-height: 45px;
-  position: relative;
-  z-index: 3;
-  background: #0e0c15;
-  padding: 0 30px;
+  background: transparent;
   clip-path: polygon(0 0, calc(100% - 18px) 0, 100% 14px, 100% 100%, 0 100%);
   border-radius: 2px;
-  color: #fff;
+  color: var(--color-white);
   font-size: 16px;
   font-weight: 500;
+  overflow: hidden;
+  cursor: pointer;
 }
 
-.gradient-button-figure:after {
-  background: linear-gradient(to left, var(--color-primary-gradient-start), var(--color-primary-gradient-end));
-  opacity: 0;
-  visibility: hidden;
-}
-
-.gradient-button-figure:hover:after {
-  opacity: 1;
-  visibility: visible;
-}
-
-.gradient-button-figure:before {
-  position: absolute;
-  left: 0;
-  top: 0;
-  transition: all 0.3s;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to right, var(--color-primary-gradient-start), var(--color-primary-gradient-end));
+.gradient-button-figure::before {
   content: "";
-  clip-path: polygon(0 0, calc(100% - 18px) 0, 100% 14px, 100% 100%, 0 100%);
+  position: absolute;
+  background: linear-gradient(to right, var(--color-primary-gradient-start), var(--color-primary-gradient-end));
   border-radius: 2px;
-  z-index: 1;
+  inset: 0;
+  z-index: -1;
+  transition: background-color 0.3s ease;
+}
+
+.gradient-button-figure::after {
+  content: "";
+  position: absolute;
+  background-color: var(--background-color);
+  clip-path: polygon(2px 2px, calc(100% - 20px) 2px, calc(100% - 2px) 16px, calc(100% - 2px) calc(100% - 2px), 2px calc(100% - 2px));
+  border-radius: 2px;
+  inset: 0;
+  z-index: -1;
+}
+
+.gradient-button-figure:hover:before {
+  background: linear-gradient(to left, var(--color-primary-gradient-start), var(--color-primary-gradient-end));
+}
+
+.gradient-button-figure_reverse {
+  clip-path: polygon( calc(100%) 0, 18px 0, 0 14px, 0 100%, calc(100%) 100% );
+}
+
+.gradient-button-figure_reverse::after {
+  clip-path: polygon( calc(100% - 2px) 2px, 20px 2px, 2px 16px, 2px calc(100% - 2px), calc(100% - 2px) calc(100% - 2px) );
+}
+
+.gradient-button-figure_reverse::before {
+  background: linear-gradient(to left, var(--color-primary-gradient-start), var(--color-primary-gradient-end));
+}
+
+.gradient-button-figure_reverse:hover:before {
+  background: linear-gradient(to right, var(--color-primary-gradient-start), var(--color-primary-gradient-end));
 }
 
 .gradient-button:hover {
