--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -33,6 +33,8 @@
     --color-lessdark: #2E313D;
     --secondary-bg-gradient: linear-gradient(107deg, #171A21 0.52%, rgba(23, 26, 33, 0) 99.49%);
     --color-gray: #3E414B;
+    --color-blackest: #16181E;
+    --color-border: rgba(255,255,255,0.05);
 }
 
 :root {
@@ -52,6 +54,7 @@
     --color-lessdark: #2E313D;
     --secondary-bg-gradient: linear-gradient(107deg, #171A21 0.52%, rgba(23, 26, 33, 0) 99.49%);
     --color-gray: #3E414B;
+    --color-border: rgba(255,255,255,0.05);
 }
 
 body {
