--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -34,6 +34,7 @@
     --secondary-bg-gradient: linear-gradient(107deg, #171A21 0.52%, rgba(23, 26, 33, 0) 99.49%);
     --color-gray: #3E414B;
     --color-blackest: #16181E;
+    --color-darker: rgba(6, 6, 6, 0.7);
     --color-border: rgba(255,255,255,0.05);
 }
 
@@ -55,6 +56,7 @@
     --secondary-bg-gradient: linear-gradient(107deg, #171A21 0.52%, rgba(23, 26, 33, 0) 99.49%);
     --color-gray: #3E414B;
     --color-border: rgba(255,255,255,0.05);
+    --color-darker: rgba(6, 6, 6, 0.7);
 }
 
 body {
@@ -246,6 +248,11 @@ textarea:active {
     filter: drop-shadow(0px 29px 36px rgba(190, 140, 253, 0.09));
 }
 
+.custom-border {
+    min-height: 320px;
+    min-width: 320px;
+}
+
 .custom-border:after {
     position: absolute;
     left: 0;
@@ -254,7 +261,7 @@ textarea:active {
     width: 100%;
     height: 100%;
     z-index: -1;
-    background: linear-gradient(180deg, var(--color-primary-gradient-start) 0%, var(--color-primary-gradient-start), transparent 77%);
+    background: linear-gradient(180deg, var(--color-primary-gradient-start) 0%, var(--color-primary-gradient-end), transparent 77%);
     content: "";
     border-radius: 20px;
 }
@@ -263,18 +270,22 @@ textarea:active {
     height: -webkit-fill-available;
 }
 
+.w-fill-available {
+    width: -webkit-fill-available;
+}
+
 .gradient-text {
     background: linear-gradient(90deg, var(--color-primary-gradient-start) 0%, #CE99FF 100%);
-    text-transform: uppercase;
+    text-transform: capitalize;
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     backface-visibility: hidden;
     color: transparent;
+}
 
-    .animated-rotated-text & {
-        text-transform: capitalize;
-    }
+.gradient-text_up {
+    text-transform: uppercase;
 }
 
 .tab-circle-button {
@@ -301,4 +312,34 @@ textarea:active {
 .tab-circle-button[data-state="active"]::after {
     background-color: transparent;
     border: 2px solid var(--color-primary);
+}
+
+.bg-full {
+    position: relative;
+    z-index: 1;
+
+    &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: -1;
+        background-color: var(--color-blackest);
+    }
+}
+
+.fade-on-switch {
+    opacity: 0;
+    animation: fadeOnSwitch 0.55s ease forwards;
+}
+
+@keyframes fadeOnSwitch {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
