--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
 
 @keyframes styles_moving-gradient {
     0% {
@@ -57,6 +58,7 @@
     --color-gray: #3E414B;
     --color-border: rgba(255,255,255,0.05);
     --color-darker: rgba(6, 6, 6, 0.7);
+    font-family: "Sora", sans-serif;
 }
 
 body {
