--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @import "tailwindcss";
 @import "@nuxt/ui";
 
@@ -58,7 +60,7 @@
     --color-gray: #3E414B;
     --color-border: rgba(255,255,255,0.05);
     --color-darker: rgba(6, 6, 6, 0.7);
-    font-family: "Sora", sans-serif;
+    font-family: "Fira Code", "Sora", sans-serif;
 }
 
 body {
@@ -94,6 +96,10 @@ img {
     display: block;
     max-height: inherit;
     max-width: 100%;
+}
+
+button, textarea, select, input {
+    font-family: "Fira Code", "Sora", sans-serif;
 }
 
 button {
