--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -275,8 +275,8 @@ textarea:active {
     z-index: 3;
     padding: 30px;
     clip-path: polygon(0 0, calc(100% - 36px) 0, 100% 30px, 100% 100%, 0 100%);
-    border-radius: var(--radius);
-    background: #0E0C15;
+    border-radius: 8px;
+    background: var(--color-blackest);
     border: 0;
 }
 
