--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -71,7 +71,7 @@
     --surface-2: #EEF0F8;
     --surface-3: #E7EAF6;
     --ui-text: #15162A;
-    --ui-text-muted: rgba(21, 22, 42, 0.62);
+    /*--ui-text-muted: rgba(21, 22, 42, 0.62);*/
     --color-link: rgba(21, 22, 42, 0.72);
     --ui-border: rgba(128, 90, 245, 0.22);
     --color-border: rgba(21, 22, 42, 0.10);
