--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -4,6 +4,7 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
 @import "./tabs.css";
+@import "./jsonEditor.scss";
 
 @keyframes styles_moving-gradient {
     0% {
