--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,10 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 @import "tailwindcss";
 @import "@nuxt/ui";
 @import "./tabs.css";
 @import "./jsonEditor.scss";
+
+@font-face {
+    font-family: "PT Root UI";
+    src: url("/fonts/PT Root UI_Regular.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "PT Root UI";
+    src: url("../fonts/PT Root UI_Medium.woff2") format("woff2");
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "PT Root UI";
+    src: url("../fonts/PT Root UI_Regular.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "PT Root UI";
+    src: url("../fonts/PT Root UI_Bold.woff2") format("woff2");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
 
 @keyframes styles_moving-gradient {
     0% {
@@ -50,7 +79,7 @@
     --shadow-primary: 0 0 20px 5px rgba(20, 126, 243, 0.1);
     --color-gray: #3E414B;
     --color-darker: rgba(6, 6, 6, 0.7);
-    font-family: "Fira Code", "Sora", sans-serif;
+    font-family: "PT Root UI", sans-serif;
     --half-border: linear-gradient(180deg, var(--color-primary-gradient-start) 0%, var(--color-primary-gradient-start), transparent 77%);
     --text-white: #FFFFFF;
 }
@@ -73,7 +102,6 @@
     --surface-2: #EEF0F8;
     --surface-3: #E7EAF6;
     --ui-text: #15162A;
-    /*--ui-text-muted: rgba(21, 22, 42, 0.62);*/
     --color-link: rgba(21, 22, 42, 0.72);
     --ui-border: rgba(128, 90, 245, 0.22);
     --color-border: rgba(21, 22, 42, 0.10);
@@ -118,7 +146,7 @@ img {
 }
 
 button, textarea, select, input {
-    font-family: "Fira Code", "Sora", sans-serif;
+    font-family: "PT Root UI", sans-serif;
 }
 
 button {
