--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -21,7 +21,7 @@
 
 @font-face {
     font-family: "PT Root UI";
-    src: url("../fonts/PT Root UI_Regular.woff2") format("woff2");
+    src: url("../../../public/fonts/PT Root UI_Regular.woff2") format("woff2");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
